package mvc.view;

public class Game {

    public static void main(String[] args){
        View theGame = new View();
    }
}
